# NuVelocity

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: CodeQuality.cmake
src/: API.h  BlitType.h  CMakeLists.txt  Frame.cpp  Frame.h  ModuleInfo.cpp  ModuleInfo.h  PaletteHolder.cpp  PaletteHolder.h  StandAloneFrame.cpp  StandAloneFrame.h
src/model/: CMakeLists.txt  ClassInfo.h  Model.h  Object.h  ObjectRegistry.h  Property.h  PropertySerializer.cpp  PropertySerializer.h
src/system/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Game.cpp  Game.h  LogCategory.h  Manager.h  Scene.h  Utils.h
